# civic_simulator

./: .gitignore  .pre-commit-config.yaml  README.md  config_html.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  set_env.sh
data/: .gitignore
notebooks/: by_block_population.ipynb  census_blocks.ipynb  generating_BOC.ipynb  get_census_data_for_counties.ipynb  plotting.ipynb  requests_by_block_population.ipynb  simulating_fixed_line.ipynb
src/civicsim/common/: constants.py  utils.py
src/civicsim/interface/: event.py  stop.py  vehicle.py
src/civicsim/router/: base_router.py  locator.py  osmx_router.py
