[project]
name = "civicsim"
version = "0.0.1"
authors = [
  { name="ScopeLab", email="jptalusan@gmail.com" },
]
description = "Civic Simulator"
readme = "README.md"
requires-python = "~=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas==2.0.3",
    "numpy==1.24.3",
    "PyYAML==6.0.1",
    "dateparser==1.1.8",
    "plotly==5.18.0",
    "requests==2.31.0",
    "pytz==2023.3.post1",
    "statsmodels==0.14.0",
    "torch==2.1.1",
    "scikit-learn==1.2.2",
    "seaborn==0.13.0",
    "matplotlib==3.7.3",
    "scipy==1.10.1",
]
[project.optional-dependencies]
format = ["black==24.4.2"]
[tool.ruf]
exclude=[
    "venv",
    ".git",
    "build",
    "site-packages",
    "dist",
    "__pypackages__",
    "_build",
    ".ruff_cache",
    ".ipynb"
]
line-length = 119

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F405", "F403"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"